--- a/src/essays/crafting-cruma.mdx
+++ b/src/essays/crafting-cruma.mdx
@@ -11,9 +11,11 @@ Más que contarte *qué* hicimos, en este ensayo te cuento **cómo lo construimo
 
 import EssayImage from "../components/EssayImage.jsx";
 
-<EssayImage 
-  src="cruma.png" 
+<EssayImage
+  src="cruma.png"
   alt="Interfaz de CRUMA mostrando la grilla de horarios"
+  bleed
+  className="relative z-30"
 />
 
 ## La grilla: el corazón de todo
