--- a/src/essays/crafting-cruma.mdx
+++ b/src/essays/crafting-cruma.mdx
@@ -11,6 +11,8 @@ Más que contarte *qué* hicimos, en este ensayo te cuento **cómo lo construimo
 
 import EssayImage from "../components/EssayImage.jsx";
 import WebPreview from "../components/WebPreview.jsx";
+import CodeBlock from "../components/CodeBlock.jsx";
+import EditableCode from "../components/EditableCode.jsx";
 
 <EssayImage
   src="Captura de pantalla 2025-09-05 210152.png"
